--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     build: .
     ports:
       - "8000:8000"
-#    volumes:
-#      - .:/app # абсолютный путь!!!!
-#    command: python /app/manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/app # абсолютный путь!!!!
     command: python manage.py runserver 0.0.0.0:8000
 
 
